--- a/app/css/main.css
+++ b/app/css/main.css
@@ -121,6 +121,10 @@ h1, h2, h3, h4, h5, h6, p, li, ul, a, span {
     background: red;
 }
 
+.highlighter {
+    background: red;
+}
+
 /*adaptive*/
 
 @media screen and (max-width: 1000px) {
